# sympoly-assignment

./: .env.example  pyproject.toml
src/: app.py  main.py
