[tool.poetry]
name = "sympoly-assignment"
version = "0.1.0"
description = ""
authors = ["Avidan Gerber <avidang@rapyd.net>"]

packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
